--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -1,10 +1,10 @@
-file(GLOB_RECURSE GAME_SRC CONFIGURE_DEPENDS "*.h" "*.c" "*.hpp" "*.cpp")
+file(GLOB_RECURSE APPLICATION_SRC CONFIGURE_DEPENDS "*.h" "*.c" "*.hpp" "*.cpp")
 
-add_executable(Game
-	${GAME_SRC}
+add_executable(Application
+	${APPLICATION_SRC}
 )
 
-set_target_properties(Game PROPERTIES
+set_target_properties(Application PROPERTIES
 	CXX_STANDARD 20
 	CXX_STANDARD_REQUIRED ON
 	CXX_EXTENSIONS OFF
@@ -12,84 +12,84 @@ set_target_properties(Game PROPERTIES
 	C_STANDARD_REQUIRED ON
 	C_EXTENSIONS OFF
 	POSITION_INDEPENDENT_CODE ON
-	OUTPUT_NAME Game
+	OUTPUT_NAME ExerciseGameMODE
 )
 
-target_include_directories(Game
+target_include_directories(Application
 	PRIVATE
-		${PROJECT_SOURCE_DIR}/Game/src
+		${PROJECT_SOURCE_DIR}/Application/src
 )
 
-target_link_libraries(Game
+target_link_libraries(Application
 	PRIVATE 
 		${OpenCV_LIBS}
 		raylib
 )
 
-target_compile_definitions(Game
+target_compile_definitions(Application
 	PRIVATE
-		GAME
+		APPLICATION
 )
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
-	target_compile_definitions(Game
+	target_compile_definitions(Application
 		PRIVATE
 			NOMINMAX
 			_CRT_SECURE_NO_WARNINGS
 			WIN32_LEAN_AND_MEAN
-			GAME_WINDOWS
+			APP_WINDOWS
 	)
 	if (MSVC)
-		target_compile_options(Game
+		target_compile_options(Application
 			PRIVATE
 				/Zc:__cplusplus
 		)
 	elseif (MINGW)
-		target_link_libraries(Game
+		target_link_libraries(Application
 			PRIVATE
 				m
 		)
-		target_link_options(Game
+		target_link_options(Application
 			PRIVATE
 		)
 	elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-		target_link_libraries(Game
+		target_link_libraries(Application
 			PRIVATE
 		)
-		target_link_options(Game
+		target_link_options(Application
 			PRIVATE
 		)
 	endif()
 endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-	target_compile_definitions(Game
+	target_compile_definitions(Application
 		PRIVATE
-			GAME_LINUX
+			APP_LINUX
 	)
 	if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-		target_link_libraries(Game
+		target_link_libraries(Application
 			PRIVATE
 				dl
 				m
   				pthread
 		)
-		target_link_options(Game PRIVATE
+		target_link_options(Application PRIVATE
 		)
 	elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-		target_link_libraries(Game
+		target_link_libraries(Application
 			PRIVATE
 		)
-		target_link_options(Game
+		target_link_options(Application
 			PRIVATE
 		)
 	endif()
 endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-	target_compile_definitions(Game
+	target_compile_definitions(Application
 		PRIVATE
-			GAME_OSX
+			APP_OSX
 	)
 endif()
 
@@ -97,9 +97,9 @@ if(CMAKE_BUILD_TYPE STREQUAL Debug)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG}" CACHE STRING "CXX flags" FORCE)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS_DEBUG}" CACHE STRING "C flags" FORCE)
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS_DEBUG}" CACHE STRING "Linker flags" FORCE)
-	target_compile_definitions(Game
+	target_compile_definitions(Application
 		PRIVATE
-			GAME_DEBUG
+			APP_DEBUG
 			DEBUG
 	)
 endif()
@@ -108,17 +108,17 @@ if(CMAKE_BUILD_TYPE STREQUAL Release)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_RELEASE}" CACHE STRING "CXX flags" FORCE)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS_RELEASE}" CACHE STRING "C flags" FORCE)
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS_RELEASE}" CACHE STRING "Linker flags" FORCE)
-	target_compile_definitions(Game
+	target_compile_definitions(Application
 		PRIVATE
-			GAME_RELEASE
+			APP_RELEASE
 			NDEBUG
 	)
 endif()
 
 add_custom_command(
-	TARGET Game POST_BUILD
+	TARGET Application POST_BUILD
 	COMMAND ${CMAKE_COMMAND} -E copy_directory
-		${PROJECT_SOURCE_DIR}/Game/res
+		${PROJECT_SOURCE_DIR}/Application/res
 		${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/res
 	COMMENT "Copying resource folder to binary directory"
 )
